# vibe

./: .gitignore  Cargo.toml  LICENSE  README.md  vibe.code-workspace
vibe_core/: Cargo.toml
vibe_core/src/: lib.rs
vibe_core/src/decoder/: flac.rs  mod.rs  mp3.rs  ogg.rs  wav.rs
vibe_core/src/info/: errors.rs  info.rs  mod.rs
vibe_core/tests/: test_decoder.rs
vibe_engine/: Cargo.toml
vibe_engine/src/player/: player.rs
vibe_engine/src/stream/: mod.rs  stream.rs
vibe_engine/tests/: test_player.rs  test_stream.rs
vibe_engine/tests/sounds/: Test1.flac
vibe_gui/: Cargo.toml
vibe_gui/src/: data.rs  delegate.rs  main.rs  view.rs
