[package]
name = "vibe_core"
version = "0.1.0"
authors = ["Asi7ho <46624642+Asi7ho@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = { version = "3.4.0", optional = true }
minimp3 = { version = "0.5.1", optional = true }

[features]
default = ["wav", "mp3"]

wav = ["hound"]
mp3 = ["minimp3"]